hphp/hack/test/typecheck/new_inference/transitive_error_3.php.like_types.exp
File "transitive_error_3.php", line 11, characters 10-18:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "transitive_error_3.php", line 18, characters 10-11:
Invalid return type (Typing[4110])
File "transitive_error_3.php", line 10, characters 17-22:
Some type constraint(s) are violated here
File "transitive_error_3.php", line 10, characters 12-12:
T is a constrained type parameter
File "transitive_error_3.php", line 10, characters 17-22:
Expected ~string
File "transitive_error_3.php", line 14, characters 22-24:
But got int
